--- a/soonam/curry.html
+++ b/soonam/curry.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<ul id="ingredients">
-			Zutaten für 4 Personen
+			ZUTATEN FÜR 4 PERSONEN
 			<li>1 Zwiebeln</li>
 			<li>3 EL Öl</li>
 			<li>1.5 TL kräftiges Currypulver</li>
